--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:4464/SiteOfGifts
+spring.datasource.username=postgres
+spring.datasource.password=4464
