Added angular application, where I added registration, login, initial gift component. Change SiteOfGifts.backup a bit. In backend added controllers, extend application.properties, repositories and entities.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:4464/SiteOfGifts
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=4464
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
