--- a/gift-advisor/package.json
+++ b/gift-advisor/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.4.0",
+    "th": "^0.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
