Added populariy sorting and new table in database

--- a/gift-advisor/package.json
+++ b/gift-advisor/package.json
@@ -25,7 +25,8 @@
     "rxjs": "~6.4.0",
     "th": "^0.1.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "ng5-slider": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.17",
@@ -46,6 +47,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "ng5-slider": "latest"
   }
 }
