--- a/gift-advisor/angular.json
+++ b/gift-advisor/angular.json
@@ -92,7 +92,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "codeCoverageExclude": ["src/app/_helper/*", "src/app/_model/*", "src/app/core/*"],
+            "codeCoverage": true
           }
         },
         "lint": {
